# LLM

./: .gitignore  README.md  profile_all.sh  run_ncu_all.py
GEMM/: CUDA_INSTALL_GUIDE.md  Makefile  NCU_PROFILING_GUIDE.md  README.md  benchmark_gemm  cuda_thread_hierarchy.md  gemm_kernels.cu  gemm_kernels.h  main.cu  result.txt  run_ncu.py  run_ncu_profiling.ps1  run_ncu_simple.bat  sgemm_cublas.cu  sgemm_naive.cu  sgemm_shared.cu
GEMM/docs/: 01_fundamentals.md  02_optimization_guide.md  README.md  (+15 more)
batch_gemm/: Makefile  benchmark  result.txt
docs/: 01_cuda_fundamentals.md  02_hardware_architecture.md  03_gemm_naive.md  04_shared_memory_tiling.md  05_register_tiling.md  06_vectorization_and_bank_conflict.md  07_tensor_cores.md  08_performance_analysis.md  09_profiling_tools.md  10_batched_gemm.md  README.md
flashattention/: Makefile  README.md
reduction/: Makefile  README.md  benchmark  benchmark.cu  benchmark_simple.py  reduction_kernels.cu  requirements.txt  result.txt
scan/: CMakeLists.txt  Makefile  README.md  result.txt
scan/docs/: TUTORIAL.md  V1_HILLIS_STEELE_EXPLAINED.md  V2_BLELLOCH_EXPLAINED.md  V2_CODE_EXPLAINED.md  V3_BANK_FREE_EXPLAINED.md  V4_WARP_PRIMITIVES_EXPLAINED.md
scan/include/scan/: scan.h
scan/src/scan/: benchmark.cu  v1_hillis_steele.cu  v2_blelloch.cu  v3_bank_free.cu  v4_warp_primitive.cu
softmax/: .gitignore  Makefile  README.md  benchmark_all  result.txt  softmax_benchmark  softmax_benchmark.cu
topk/: Makefile  README.md  result.txt  solution.cu
transpose/: Makefile  README.md  result.txt  transpose_benchmark
(+189 files in other folders)
